Fixed overflow

--- a/css/main.css
+++ b/css/main.css
@@ -4570,6 +4570,8 @@ height: 0;
   text-overflow: ellipsis;
   font-style: italic;
   font-size: 13px;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 #boards_profile .address {
